fix: 아티스트 별 이벤트 가져오는 쿼리 수정 (#170)